[gd_scene load_steps=33 format=3 uid="uid://c4lsv75wh0874"]

[ext_resource type="Script" uid="uid://dijrny7t3e5qu" path="res://Kat/Scripts/enemy.gd" id="1_mtqva"]
[ext_resource type="Texture2D" uid="uid://dpvajkyxm8b2q" path="res://Mae/Assets/Bug2-idle.png" id="1_vgkv0"]
[ext_resource type="Texture2D" uid="uid://noxxosyn03j7" path="res://Mae/Assets/Bug2-walk.png" id="2_pd163"]
[ext_resource type="Texture2D" uid="uid://b2ad6ihp1qeft" path="res://Mae/Assets/Poof.png" id="2_v34d4"]
[ext_resource type="Script" uid="uid://d3xhfapwhtq1c" path="res://EnemyStateMachine.gd" id="3_q8fjo"]
[ext_resource type="Script" uid="uid://0tthflpwe5xs" path="res://Kat/Scripts/Enemy_idle.gd" id="4_iysdc"]
[ext_resource type="Script" uid="uid://ccdcnt2s32jwv" path="res://Kat/Scripts/Enemy_chase.gd" id="5_mi1fc"]
[ext_resource type="Script" uid="uid://up0b432wud28" path="res://Kat/Scripts/LoS.gd" id="6_e821s"]
[ext_resource type="Script" path="res://Kat/Scenes/Enemy_charge.gd" id="7_gvs0u"]
[ext_resource type="Script" uid="uid://dp43eq8w4mchl" path="res://Kat/Scripts/debug_text.gd" id="7_ja812"]
[ext_resource type="Script" path="res://Kat/Scenes/Enemy_attack.gd" id="8_lj4a3"]
[ext_resource type="Script" uid="uid://qrj2c8nr37pu" path="res://Kat/Scripts/label.gd" id="9_nwbcv"]
[ext_resource type="Script" uid="uid://begu7rn3rdwab" path="res://Kat/Scripts/ray_cast_2d.gd" id="10_4c8or"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8v6uj"]
atlas = ExtResource("2_v34d4")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5dc1"]
atlas = ExtResource("2_v34d4")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tu60"]
atlas = ExtResource("2_v34d4")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa7ec"]
atlas = ExtResource("2_v34d4")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwjr2"]
atlas = ExtResource("2_v34d4")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rryhc"]
atlas = ExtResource("2_v34d4")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue7qn"]
atlas = ExtResource("1_vgkv0")
region = Rect2(0, 0, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhr51"]
atlas = ExtResource("1_vgkv0")
region = Rect2(481, 0, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp55l"]
atlas = ExtResource("1_vgkv0")
region = Rect2(0, 481, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibvoe"]
atlas = ExtResource("1_vgkv0")
region = Rect2(481, 481, 481, 481)

[sub_resource type="AtlasTexture" id="AtlasTexture_25inn"]
atlas = ExtResource("2_pd163")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ukjt"]
atlas = ExtResource("2_pd163")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_y24c2"]
atlas = ExtResource("2_pd163")
region = Rect2(0, 480, 480, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_daa1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v6uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5dc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tu60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa7ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwjr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rryhc")
}],
"loop": true,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue7qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhr51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp55l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibvoe")
}],
"loop": true,
"name": &"Enemy_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25inn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ukjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y24c2")
}],
"loop": true,
"name": &"Enemy_Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eptvq"]
radius = 21.0
height = 66.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nsq6j"]
radius = 4087.48

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6uc4"]
size = Vector2(609.667, 253.333)

[sub_resource type="LabelSettings" id="LabelSettings_ih70d"]
line_spacing = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_3p2xb"]
line_spacing = 5.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_mtqva")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_daa1t")
animation = &"Death"
autoplay = "Enemy_Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eptvq")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_q8fjo")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State_Machine"]
script = ExtResource("4_iysdc")

[node name="Chase" type="Node" parent="State_Machine"]
script = ExtResource("5_mi1fc")

[node name="Charge" type="Node" parent="State_Machine"]
script = ExtResource("7_gvs0u")

[node name="Attack" type="Node" parent="State_Machine"]
script = ExtResource("8_lj4a3")

[node name="Player_Raycast" type="RayCast2D" parent="."]
target_position = Vector2(-349, 0)
collide_with_areas = true
script = ExtResource("6_e821s")

[node name="Left_Ground_Check" type="RayCast2D" parent="."]
position = Vector2(-21, 1)
collision_mask = 2
script = ExtResource("10_4c8or")

[node name="Right_Ground_Check" type="RayCast2D" parent="."]
position = Vector2(24, 1)
collision_mask = 2
script = ExtResource("10_4c8or")

[node name="Chase Range" type="Area2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(0.15, 0.15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase Range"]
position = Vector2(-7, 4)
shape = SubResource("CircleShape2D_nsq6j")

[node name="Attack Range" type="Area2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(0.15, 0.15)
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Range"]
position = Vector2(0, -6.667)
scale = Vector2(2, 1)
shape = SubResource("RectangleShape2D_c6uc4")

[node name="Charge_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DEBUG TEXT" type="Label" parent="."]
offset_left = -51.0
offset_top = -110.0
offset_right = 58.0
offset_bottom = -65.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "DEBUG"
label_settings = SubResource("LabelSettings_ih70d")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_ja812")

[node name="Exclamation_Point" type="Label" parent="."]
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = -35.0
label_settings = SubResource("LabelSettings_3p2xb")
horizontal_alignment = 1
script = ExtResource("9_nwbcv")

[connection signal="stop_chase_upon_death" from="." to="State_Machine/Chase" method="chase_end"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="debug_text_idle" from="State_Machine/Idle" to="DEBUG TEXT" method="debug_text_idle"]
[connection signal="transitioned" from="State_Machine/Idle" to="State_Machine" method="on_child_transitioned"]
[connection signal="debug_text_walk" from="State_Machine/Chase" to="DEBUG TEXT" method="debug_text_walk"]
[connection signal="transitioned" from="State_Machine/Chase" to="State_Machine" method="on_child_transitioned"]
[connection signal="debug_text_charge" from="State_Machine/Charge" to="DEBUG TEXT" method="debug_text_charge"]
[connection signal="debug_text_attack" from="State_Machine/Attack" to="DEBUG TEXT" method="debug_text_attack"]
[connection signal="end_chase" from="Player_Raycast" to="State_Machine/Chase" method="chase_end"]
[connection signal="end_chase" from="Player_Raycast" to="Exclamation_Point" method="chase_ended"]
[connection signal="initiate_chase" from="Player_Raycast" to="State_Machine/Idle" method="chase_start"]
[connection signal="initiate_chase" from="Player_Raycast" to="Exclamation_Point" method="chase_triggered"]
[connection signal="ground" from="Left_Ground_Check" to="State_Machine/Chase" method="ground"]
[connection signal="ground" from="Left_Ground_Check" to="State_Machine/Charge" method="ground"]
[connection signal="no_ground" from="Left_Ground_Check" to="State_Machine/Chase" method="no_ground"]
[connection signal="no_ground" from="Left_Ground_Check" to="State_Machine/Charge" method="no_ground"]
[connection signal="ground" from="Right_Ground_Check" to="State_Machine/Chase" method="ground"]
[connection signal="no_ground" from="Right_Ground_Check" to="State_Machine/Chase" method="no_ground"]
[connection signal="body_entered" from="Chase Range" to="State_Machine/Chase" method="_on_range_body_entered"]
[connection signal="body_entered" from="Chase Range" to="Player_Raycast" method="_on_range_body_entered"]
[connection signal="body_exited" from="Chase Range" to="State_Machine/Chase" method="_on_range_body_exited"]
[connection signal="body_exited" from="Chase Range" to="Player_Raycast" method="_on_range_body_exited"]
[connection signal="area_entered" from="Attack Range" to="." method="_on_attack_range_area_entered"]
[connection signal="body_entered" from="Attack Range" to="State_Machine/Chase" method="_on_range_body_entered_attack_range"]
[connection signal="body_entered" from="Attack Range" to="State_Machine/Charge" method="_on_range_body_entered"]
[connection signal="body_exited" from="Attack Range" to="State_Machine/Charge" method="_on_range_body_exited"]
[connection signal="timeout" from="Charge_Timer" to="State_Machine/Charge" method="_on_charge_timeout"]
